move margin up the our service title

--- a/final-project/index.html
+++ b/final-project/index.html
@@ -246,9 +246,9 @@
               <h6>Our Teams</h6>
               <!-- John title and description   -->
             </div>
-            <img class="John" src="images/john.jpg" alt="photo of john" />
+            <img class="john" src="images/john.jpg" alt="photo of john" />
 
-            <div class="ti-tex-p">
+            <div class="ti-tex-p doe">
               <h2>John Doe</h2>
               <h3>CEO and Co-owner</h3>
               <h4>_________________</h4>
@@ -265,7 +265,7 @@
             <div class="width-max margin">
               <img class="bob" src="images/bob.jpg" alt="bob phoot" />
             </div>
-            <div class="ti-tex-p">
+            <div class="ti-tex-p rite">
               <h2>Bob Rite</h2>
               <h3>CFO and Co-owner</h3>
               <h4>_________________</h4>
